--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "split-pane-react": "^0.1.3",
+    "universalviewer": "^4.0.22",
     "vis-timeline": "file:../vis-timeline"
   },
   "devDependencies": {
