--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "vis-timeline": "file:../vis-timeline"
+    // "vis-timeline": "file:../vis-timeline"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
